# coursework9

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: celery.py  settings.py  urls.py
habit_tracker/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit_tracker/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_user.py
nginx/: default.conf
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_tg_chat_id.py  0003_alter_user_tg_chat_id_alter_user_username.py
